# samling

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  .sqlfluff  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  clorinde.toml  commitlint.config.js  deny.toml  docker-compose.yml  generate-clorinde-file.sh  generate-cornucopia-file.sh  release-please-config.json  release-plz.toml  schema.json
.cargo/: config.toml
.github/workflows/: build-test-release.yml  docker-image.yml  main.yml  notify.yml
kustomize/base/: certificate.yaml  db-migrate.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
migrations/: 001-initial-schema.sql  002-size-ean-code.sql  005-updated-at-on-all-tables.sql  008-user-last-signin.sql  011-simplify-pricing-take-2.sql  012-collection-organization-id-not-null.sql  014-associate-style-attributes-improved.sql
queries/: admin.sql  collection.sql  color.sql  group.sql  last_updated.sql  price.sql  pricelist.sql  style.sql  user.sql
samling/: Cargo.toml
samling-clorinde/: Cargo.toml  LICENSE
samling-clorinde/src/: array_iterator.rs  domain.rs  lib.rs  queries.rs  type_traits.rs  types.rs
samling-clorinde/src/client/: async_.rs
samling-clorinde/src/queries/: admin.rs  attribute.rs  attributetype.rs  category.rs  collection.rs  color.rs  group.rs  image.rs  misc.rs  organization.rs  price.rs  pricelist.rs  size.rs  style.rs  user.rs
samling/migrations/: 003-size-status.sql  004-simplify-pricing.sql  006-size-position.sql  007-weight-volume.sql  009-simplify-roles.sql  010-replace-user-groups-function.sql  013-styles-matching-attributes-function.sql
samling/queries/: admin.sql  attribute.sql  attributetype.sql  category.sql  color.sql  image.sql  misc.sql  organization.sql  size.sql  user.sql
samling/src/: app.rs  cloudflare.rs  db_migrations.rs  entities.rs  errors.rs  extractors.rs  filters.rs  helpers.rs  i18n.rs  jsonschema.rs  lib.rs  routes.rs  sorting.rs  state.rs  traits.rs  ui.rs
samling/src/admin/: repo.rs
samling/src/attributes/: entities.rs  repo.rs  routes.rs
samling/src/auth/: entities.rs  extractors.rs  filters.rs  rbac.rs  repo.rs  signing.rs
samling/src/auth/sso/: google.rs  microsoft.rs
samling/src/categories/: entities.rs  repo.rs  routes.rs
samling/src/collections/: entities.rs  filters.rs  repo.rs  routes.rs
samling/src/colors/: entities.rs  repo.rs
samling/src/entity_ref/: external_id.rs  mod.rs  ref_.rs  request.rs  slug.rs
samling/src/exports/: export.rs  formats.rs  mod.rs  routes.rs
samling/src/images/: entities.rs  mod.rs  repo.rs
samling/src/organizations/: entities.rs  repo.rs
samling/src/prices/: entities.rs  mod.rs  repo.rs  routes.rs
samling/src/sizes/: entities.rs  repo.rs
samling/src/styles/: entities.rs  filters.rs  repo.rs  sorting.rs
samling/ui/: .env  tailwind.config.js
samling/ui/src/: AppLayout.tsx  browser-storage.ts  images.ts  index.tsx  msal.ts  utils.ts
samling/ui/src/components/: ActivePriceLists.tsx  CollectionTable.tsx  CollectionTablePriceListsMenu.tsx  CollectionTableSortMenu.tsx  CollectionsGridList.tsx  DummyLink.tsx  DummyLocaleLink.tsx  Loading.tsx  LocaleLink.tsx  SignInModal.tsx
samling/ui/src/components/admin/: AddCollectionItemsModal.tsx  CollectionsTable.tsx  DeleteGroupModal.tsx  GroupsTable.tsx  ModalBase.tsx  MultipleCombobox.tsx  NewCollectionPricingGroupModal.tsx  UsersTable.tsx
samling/ui/src/components/columns/data/: Colors.tsx  UnitPrices.tsx
samling/ui/src/components/columns/header/: GenericThCell.tsx
samling/ui/src/components/filters/: CategoryFilter.tsx  CoreFilter.tsx  CountryFilter.tsx  SearchableFilter.tsx  ServiceItemFilter.tsx
samling/ui/src/components/forms/: AssociatedPriceListsEditor.tsx  I18nInput.tsx  ImageInput.tsx
samling/ui/src/components/nav/: ProfileDropdown.tsx  ProfileDropdownDesktop.tsx  ProfileDropdownMobile.tsx  SidebarDesktop.tsx  TopbarMobile.tsx  propTypes.tsx
samling/ui/src/locales/de/: messages.po
samling/ui/src/locales/en/: messages.js  messages.po
samling/ui/src/locales/sv/: messages.po
samling/ui/src/pages/app/: AlreadySignedInPage.tsx  Collection.tsx  Style.tsx
samling/ui/src/pages/app/admin/: AdminCollections.tsx  AdminEditCollection.tsx  AdminEditGroup.tsx  AdminGroups.tsx  AdminHome.tsx  AdminUsers.tsx
samling/ui/src/pages/app/errors/: NotFound.tsx
samling/ui/src/pages/public/: SignInPage.tsx  SplashPage.tsx
samling/ui/src/pages/public/errors/: Unauthorized.tsx
samling/ui/src/state/: store.ts
samling/ui/src/types/: admin.ts  columns.ts  other.ts
src/: app.rs  cli.rs  cloudflare.rs  cornucopia.rs  db_migrations.rs  errors.rs  extractors.rs  filters.rs  helpers.rs  i18n.rs  jsonschema.rs  lib.rs  main.rs  traits.rs
src/admin/: entities.rs  repo.rs  routes.rs
src/attributes/: entities.rs  repo.rs  routes.rs
src/auth/: entities.rs  extractors.rs  filters.rs  hashing.rs  mod.rs  rbac.rs  repo.rs  routes.rs  signing.rs  sorting.rs
src/auth/sso/: google.rs  microsoft.rs  mod.rs
src/categories/: entities.rs  repo.rs  routes.rs
src/collections/: entities.rs  filters.rs  mod.rs  repo.rs  routes.rs
src/colors/: entities.rs  repo.rs  routes.rs
src/entity_ref/: any_id.rs  external_id.rs  id.rs  mod.rs  ref_.rs  request.rs  slug.rs
src/exports/: aggregator.rs  expander.rs  export.rs  formats.rs  mod.rs  routes.rs
src/images/: entities.rs  repo.rs  routes.rs
src/organizations/: entities.rs  extractors.rs  mod.rs  repo.rs  routes.rs
src/prices/: entities.rs  filters.rs  mod.rs  repo.rs  routes.rs
src/sizes/: entities.rs  repo.rs  routes.rs
src/styles/: entities.rs  filters.rs  mod.rs  repo.rs  routes.rs  sorting.rs
ui/: .gitignore  .linguirc  .prettierignore  package-lock.json  package.json
ui/public/: index.html  manifest.json
ui/src/: App.tsx  api.ts  entityRef.ts  hooks.ts  i18n.ts  roles.ts  settings.ts
ui/src/components/: CollectionFilters.tsx  CollectionTable.tsx  CollectionTableSortMenu.tsx  EnvironmentWarning.tsx  ExportForm.tsx  LoadingIndicator.tsx  UserMessage.tsx  (+3 more)
(+44 files in other folders)
