[package]
name = "samling"
version = "0.7.0"
license = "MIT"
edition = "2021"
description = "App for managing apparel collections"
repository = "https://github.com/hyperkliv/samling"
documentation = "https://docs.rs/samling/"
homepage = "https://github.com/hyperkliv/samling"

[dependencies]
argon2 = "0.5.2"
async-trait = "0.1.77"
axum = { version = "0.7.3", features = ["macros"] }
axum-extra = { version = "0.9.1", features = ["typed-header"] }
base64 = "0.21.5"
bytes = { version = "1.5.0", features = ["serde"] }
clap = { version = "4.4.12", features = ["derive", "env"], optional = true }
cornucopia_async = { version = "0.6.0", features = ["with-serde_json-1"] }
csv = "1.3.0"
deadpool-postgres = "0.12.1"
derive_more = "0.99.17"
dotenvy = "0.15.7"
futures = "0.3.30"
governor = "0.6.0"
http = "1.0.0"
hyper = { version = "1.1.0", features = ["server", "http1", "http2"] }
include_dir = "0.7.3"
indexmap = { version = "2.1.0", features = ["serde"] }
itertools = "0.12.0"
jsonwebtoken = "9.2.0"
log = "0.4.20"
mimalloc = { version = "0.1.39", default-features = false, optional = true }
mime = "0.3.17"
mime_guess = "2.0.4"
num_enum = "0.7.1"
once_cell = "1.19.0"
password-hash = { version = "0.5.0", features = ["std"] }
postgres-types = { version = "0.2.6", features = ["derive", "with-time-0_3", "with-serde_json-1"] }
rand = "0.8.5"
reqwest = { version = "0.11.23", features = ["rustls-tls", "json", "stream", "multipart"], default-features = false }
rust_decimal = { version = "1.33.1", features = ["db-tokio-postgres", "db-postgres", "serde-with-float"] }
rust_xlsxwriter = "0.56.0"
schemars = { version = "0.8.16", features = ["derive", "preserve_order", "bytes", "url", "rust_decimal"] }
sentry = { version = "0.32.1", default-features = false, features = ["rustls", "tracing", "backtrace", "contexts", "panic", "tokio", "reqwest", "tower"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = { version = "1.0.111", features = ["preserve_order"] }
serde_path_to_error = "0.1.15"
slug = "0.1.5"
smol_str = { version = "0.2.0", features = ["serde"] }
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.56"
# TODO: Remove `serde-well-known`, it's being deprecated. See this commit:
#       https://github.com/time-rs/time/commit/110e17bb8461816551f7197a2aa2e34c981fa22d
time = { version = "0.3.31", features = ["serde", "serde-human-readable", "serde-well-known"] }
tokio = { version = "1.35.1", default-features = false, features = ["signal", "macros", "rt-multi-thread"] }
tokio-postgres = "0.7.10"
tower = "0.4.13"
tower-http = { version = "0.5.0", default-features = false, features = ["fs", "trace", "cors", "compression-full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", optional = true }
url = { version = "2.5.0", features = ["serde"] }

[features]
default = ["cli"]
cli = ["clap", "tracing-subscriber"]
ui = []
