[package]
name = "samling"
version = "0.11.2"
license = "MIT"
edition = "2021"
description = "App for managing apparel collections"
repository = "https://github.com/hyperkliv/samling"
documentation = "https://docs.rs/samling/"
homepage = "https://github.com/hyperkliv/samling"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.84"
axum = { version = "0.7.9", features = ["macros"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
base64 = "0.22.1"
bytes = { version = "1.9.0", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive", "env"], optional = true }
cornucopi_async = { version = "0.7.1", features = ["with-serde_json-1"] }
csv = "1.3.1"
deadpool-postgres = "0.14.1"
derive_more = { version = "1.0.0", features = ["full"] }
dotenvy = "0.15.7"
futures = "0.3.31"
governor = "0.8.0"
http = "1.2.0"
hyper = { version = "1.5.2", features = ["server", "http1", "http2"] }
include_dir = "0.7.4"
indexmap = { version = "2.7.0", features = ["serde"] }
itertools = "0.14.0"
jsonwebtoken = "9.3.0"
log = "0.4.22"
mimalloc = { version = "0.1.43", default-features = false, optional = true }
mime = "0.3.17"
mime_guess = "2.0.5"
num_enum = "0.7.3"
once_cell = "1.20.2"
password-hash = { version = "0.5.0", features = ["std"] }
postgres-types = { version = "0.2.8", features = [
    "derive",
    "with-time-0_3",
    "with-serde_json-1",
] }
rand = "0.8.5"
reqwest = { version = "0.12.12", features = [
    "rustls-tls",
    "json",
    "stream",
    "multipart",
], default-features = false }
rust_decimal = { version = "1.36.0", features = [
    "db-tokio-postgres",
    "db-postgres",
    "serde-with-float",
] }
rust_xlsxwriter = "0.80.0"
schemars = { version = "0.8.21", features = [
    "derive",
    "preserve_order",
    "bytes",
    "url",
    "rust_decimal",
] }
sentry = { version = "0.35.0", default-features = false, features = [
    "rustls",
    "tracing",
    "backtrace",
    "contexts",
    "panic",
    "tokio",
    "reqwest",
    "tower",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.134", features = ["preserve_order"] }
serde_path_to_error = "0.1.16"
slug = "0.1.6"
smol_str = { version = "0.3.2", features = ["serde"] }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.9"
# TODO: Remove `serde-well-known`, it's being deprecated. See this commit:
#       https://github.com/time-rs/time/commit/110e17bb8461816551f7197a2aa2e34c981fa22d
time = { version = "0.3.37", features = [
    "serde",
    "serde-human-readable",
    "serde-well-known",
] }
tokio = { version = "1.42.0", default-features = false, features = [
    "signal",
    "macros",
    "rt-multi-thread",
] }
tokio-postgres = "0.7.12"
tower = "0.5.2"
tower-http = { version = "0.6.2", default-features = false, features = [
    "fs",
    "trace",
    "cors",
    "compression-full",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", optional = true }
url = { version = "2.5.4", features = ["serde"] }

[features]
default = ["cli"]
cli = ["clap", "tracing-subscriber"]
ui = []
